fixed dark mode

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,7 +2,7 @@
 body {
     background-color: #121212;
     color: #e0e0e0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
 }
